sizing and alignment issues

--- a/src/components/projectItem/projectItem.css
+++ b/src/components/projectItem/projectItem.css
@@ -1,6 +1,7 @@
 .project-item {
   display: flex;
   flex-direction: row;
+  align-items: center;
   gap: 1rem;
   background-color: var(--filler-color);
   border: 11px solid var(--filler-color);
