--- a/src/containers/projects/projects.css
+++ b/src/containers/projects/projects.css
@@ -18,6 +18,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
+  gap: 1rem;
 }
 
 @media screen and (max-width: 480px) {
